[package]
name = "dicrs"
version = "0.1.0"
authors = ["benber86 <benoitb@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.8.0"
termion = "1.5"
unicode-width = "0.1"
clipboard="0.5.0"
failure="0.1.0"
rusqlite="0.21.0"
